@@ -1,3 +1,5 @@
+ - Add new log function set_prefix
+ - Add new log function log(level, message)
 0.4.0 [2009-0?-??]
  - Added macro cell integral *dE
  - Added mechanism to add additional integral types
